Fix (I hope) for the problem of images being too wide and thereby obscuring the burger menu on mobile phones

--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -5,3 +5,9 @@
 .btn:hover {
     color:white;
 }
+img {
+    max-height: 300px;
+    width: auto;
+    display: block;
+    max-width: 100%;
+}
